update styles for user badge related elements

--- a/scss/common.scss
+++ b/scss/common.scss
@@ -27,6 +27,7 @@
 //   - Category list
 //   - Suggested topics
 // - User
+//   - User badge
 //   - User card
 
 @import 'common/base';
@@ -51,4 +52,5 @@
 @import 'common/topic-list-category';
 @import 'common/topic-list-suggested';
 @import 'common/user';
+@import 'common/user-badge';
 @import 'common/user-card';
