--- a/common/common.scss
+++ b/common/common.scss
@@ -4340,6 +4340,11 @@ nav.post-controls .show-replies i {
   left: 0;
 }
 
+.stats-title {
+  margin-bottom: 8px;
+  text-transform: none;
+}
+
 .user-main .about {
   background-color: color-chooser(#424242, #ffffff);
   border: 0;
@@ -4590,6 +4595,11 @@ nav.post-controls .show-replies i {
           box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.4);
   font-weight: normal;
 }
+.user-main .user-content {
+  background-color: transparent;
+  margin-bottom: 24px;
+  padding: 0;
+}
 .user-main .user-right {
   display: block;
   -webkit-box-flex: 1;
@@ -4767,6 +4777,232 @@ nav.post-controls .show-replies i {
   -webkit-flex-grow: 1;
       -ms-flex-positive: 1;
           flex-grow: 1;
+  min-width: 0;
+}
+.user-table .wrapper > .ember-view {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-flow: 1;
+      -ms-flex-flow: 1;
+          flex-flow: 1;
+  min-width: 0;
+}
+
+.badge-card {
+  background-color: color-chooser(#424242, #ffffff);
+  border: 0;
+  border-radius: 2px;
+  -webkit-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.4);
+          box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.4);
+  color: $primary;
+  padding: 0;
+  margin-right: 0;
+  margin-bottom: 8px;
+}
+.badge-card[href]:focus, .badge-card[href]:hover, .badge-card[tabindex]:focus, .badge-card[tabindex]:hover {
+  -webkit-box-shadow: 0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12), 0 5px 5px -3px rgba(0, 0, 0, 0.4);
+          box-shadow: 0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12), 0 5px 5px -3px rgba(0, 0, 0, 0.4);
+  text-decoration: none;
+}
+.badge-card[href]:focus, .badge-card[tabindex]:focus {
+  outline: 0;
+}
+.badge-card, .badge-card.large, .badge-card.medium {
+  width: 100%;
+}
+.badge-card .badge-contents {
+  min-height: 0;
+}
+.badge-card .badge-contents .badge-icon {
+  padding: 16px 16px;
+  font-size: 34px;
+  font-weight: 400;
+  letter-spacing: 0;
+  line-height: 1.176471;
+  background-color: color-chooser(#212121, #f5f5f5);
+  min-width: 90.285714px;
+}
+.badge-card .badge-contents .badge-info {
+  padding: 16px 16px;
+  min-width: 0;
+}
+.badge-card .badge-contents .badge-info h3 {
+  font-size: 16px;
+  font-weight: 400;
+  letter-spacing: 0.04em;
+  line-height: 1.5;
+  margin-bottom: 8px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+.badge-card .badge-contents .badge-info-item {
+  -webkit-box-flex: 1;
+  -webkit-flex-grow: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  min-width: 0;
+}
+.badge-card .badge-summary {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+.badge-card .check-display {
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-radius: 12px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  font-size: 14px;
+  height: 24px;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  top: 8px;
+  right: 8px;
+  width: 24px;
+}
+.badge-card .grant-count {
+  font-size: 14px;
+  line-height: 1;
+  top: 8px;
+  right: 8px;
+}
+
+.badge-grouping {
+  -webkit-column-count: 3;
+     -moz-column-count: 3;
+          column-count: 3;
+  -webkit-column-gap: 24px;
+     -moz-column-gap: 24px;
+          column-gap: 24px;
+  margin-bottom: 16px;
+}
+.badge-grouping h3 {
+  margin-bottom: 8px;
+}
+.badge-grouping .title {
+  -webkit-column-span: all;
+     -moz-column-span: all;
+          column-span: all;
+}
+
+.badge-groups {
+  margin: 0 0 24px;
+}
+
+.badges-section {
+  -webkit-column-count: 3;
+     -moz-column-count: 3;
+          column-count: 3;
+  -webkit-column-gap: 24px;
+     -moz-column-gap: 24px;
+          column-gap: 24px;
+  margin-bottom: 16px;
+}
+.badges-section > h3,
+.badges-section > p {
+  -webkit-column-span: all;
+     -moz-column-span: all;
+          column-span: all;
+}
+
+.show-badge h1 {
+  margin-bottom: 24px;
+}
+
+.show-badge-details {
+  margin-top: 0;
+  margin-bottom: 16px;
+}
+.show-badge-details .badge-grant-info {
+  margin-left: 24px;
+}
+.show-badge-details .grant-info-item {
+  margin-bottom: 8px;
+}
+
+.user-badges {
+  margin-bottom: 24px;
+}
+.user-badges > .ember-view {
+  -webkit-column-count: 3;
+     -moz-column-count: 3;
+          column-count: 3;
+  -webkit-column-gap: 24px;
+     -moz-column-gap: 24px;
+          column-gap: 24px;
+  margin-bottom: 16px;
+}
+
+.user-badges-list {
+  -webkit-column-count: 3;
+     -moz-column-count: 3;
+          column-count: 3;
+  -webkit-column-gap: 24px;
+     -moz-column-gap: 24px;
+          column-gap: 24px;
+}
+
+.user-info {
+  background-color: color-chooser(#424242, #ffffff);
+  border: 0;
+  border-radius: 2px;
+  -webkit-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.4);
+          box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.4);
+  color: $primary;
+  padding: 0;
+  padding: 16px 16px;
+  -webkit-column-break-inside: avoid;
+     page-break-inside: avoid;
+          break-inside: avoid;
+  display: -webkit-inline-box;
+  display: -webkit-inline-flex;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  margin-bottom: 8px;
+}
+.user-info[href]:focus, .user-info[href]:hover, .user-info[tabindex]:focus, .user-info[tabindex]:hover {
+  -webkit-box-shadow: 0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12), 0 5px 5px -3px rgba(0, 0, 0, 0.4);
+          box-shadow: 0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12), 0 5px 5px -3px rgba(0, 0, 0, 0.4);
+  text-decoration: none;
+}
+.user-info[href]:focus, .user-info[tabindex]:focus {
+  outline: 0;
+}
+.user-info, .user-info.large, .user-info.medium, .user-info.small {
+  min-height: 0;
+  width: 100%;
+}
+.user-info.badge-info, .user-info.large.badge-info, .user-info.medium.badge-info, .user-info.small.badge-info {
+  min-height: 0;
+}
+.user-info .user-detail, .user-info.large .user-detail, .user-info.medium .user-detail, .user-info.small .user-detail {
+  width: auto;
+}
+.user-info .user-image, .user-info.large .user-image, .user-info.medium .user-image, .user-info.small .user-image {
+  width: auto;
+}
+.user-info .avatar {
+  height: 39.999988px;
+  width: 39.999988px;
+}
+.user-info .user-detail {
+  font-size: inherit;
+  padding-left: 0;
+}
+.user-info .user-detail .title {
+  margin-top: 0;
+}
+.user-info .user-image {
+  margin-right: 8px;
+  padding-right: 0;
 }
 
 .user-badge,
