convert fa picture o to md crop original

--- a/scss/common/_material-icons.scss
+++ b/scss/common/_material-icons.scss
@@ -174,6 +174,10 @@
   @include material-icons('edit');
 }
 
+.fa-picture-o {
+  @include material-icons('crop_original');
+}
+
 .fa-plus {
   @include material-icons('add');
 }
