--- a/scss/common.scss
+++ b/scss/common.scss
@@ -13,6 +13,7 @@
 // - Cooked
 //   - Aside
 // - Dropdown
+// - Form
 // - Header
 // - List control
 // - Material icons
@@ -38,6 +39,7 @@
 @import 'common/cooked';
 @import 'common/cooked-aside';
 @import 'common/dropdown';
+@import 'common/form';
 @import 'common/header';
 @import 'common/list-control';
 @import 'common/material-icons';
