--- a/scss/common.scss
+++ b/scss/common.scss
@@ -14,6 +14,7 @@
 //   - Aside
 // - Dropdown
 // - Form
+//   - Auto complete
 //   - Select2
 // - Header
 // - List control
@@ -40,6 +41,7 @@
 @import 'common/cooked-aside';
 @import 'common/dropdown';
 @import 'common/form';
+@import 'common/form-auto-complete';
 @import 'common/form-select2';
 @import 'common/header';
 @import 'common/list-control';
