update styles for d editor components

--- a/scss/common.scss
+++ b/scss/common.scss
@@ -15,6 +15,7 @@
 // - Dropdown
 // - Form
 //   - Auto complete
+//   - D editor
 //   - Select2
 // - Header
 // - List control
@@ -42,6 +43,7 @@
 @import 'common/dropdown';
 @import 'common/form';
 @import 'common/form-auto-complete';
+@import 'common/form-d-editor';
 @import 'common/form-select2';
 @import 'common/header';
 @import 'common/list-control';
