--- a/common/common.scss
+++ b/common/common.scss
@@ -19,7 +19,7 @@
 }
 
 blockquote::after, blockquote::before, aside.quote .quote-controls .back::before,
-aside.quote .quote-controls .quote-other-topic::before, .d-editor-preview div.poll[data-poll-type='multiple'] li[data-poll-option-id]::before, .expanded-quote div.poll[data-poll-type='multiple'] li[data-poll-option-id]::before, .d-editor-preview div.poll li[data-poll-option-id]::before, .expanded-quote div.poll li[data-poll-option-id]::before, .select2-container a.select2-choice .select2-arrow b::before, .fa-angle-double-down::before, .fa-arrow-down::before, .fa-bar-chart-o::before, .fa-bars::before, .fa-bold::before, .fa-bookmark::before, .fa-calendar::before, .fa-caret-down::before, .fa-caret-right::before, .fa-certificate::before, .fa-check::before, .fa-check-square-o::before, .fa-chevron-down::before, .fa-chevron-up::before, .fa-circle::before, .fa-circle-o::before, .fa-close::before, .fa-clock-o::before, .fa-code::before, .fa-cog::before, .fa-comment::before, .fa-comment-o::before, .fa-dot-circle-o::before, .fa-download::before, .fa-ellipsis-h::before, .fa-envelope::before, .fa-envelope-o::before, .fa-exclamation-circle::before, .fa-eye::before, .fa-eye-slash::before, .fa-flag::before, .fa-folder::before, .fa-gear::before, .fa-header::before, .fa-heart::before, .fa-italic::before, .fa-link::before, .fa-list::before, .fa-list-ol::before, .fa-list-ul::before, .fa-lock::before, .fa-mail-forward::before, .fa-minus::before, .fa-pencil::before, .fa-picture-o::before, .fa-plus::before, .fa-question-circle::before, .fa-quote-right::before, .fa-reply::before, .fa-search::before, .fa-shield::before, .fa-sign-out::before, .fa-smile-o::before, .fa-square-o::before, .fa-tasks::before, .fa-thumb-tack::before, .fa-times::before, .fa-times-circle::before, .fa-trash-o::before, .fa-undo::before, .fa-unlock::before, .fa-unlock-alt::before, .fa-upload::before, .fa-user::before, .fa-user-plus::before, .fa-users::before, .fa-wrench::before, nav.post-controls button .read-icon::before, #reply-control.draft .toggler::before, #reply-control .grippie::before, #reply-control .toggler::before, #reply-control .toggle-preview::before {
+aside.quote .quote-controls .quote-other-topic::before, .d-editor-preview div.poll[data-poll-type='multiple'] li[data-poll-option-id]::before, .expanded-quote div.poll[data-poll-type='multiple'] li[data-poll-option-id]::before, .d-editor-preview div.poll li[data-poll-option-id]::before, .expanded-quote div.poll li[data-poll-option-id]::before, .select2-container a.select2-choice .select2-arrow b::before, .fa-angle-double-down::before, .fa-arrow-down::before, .fa-asterisk::before, .fa-bar-chart-o::before, .fa-bars::before, .fa-bold::before, .fa-bookmark::before, .fa-calendar::before, .fa-caret-down::before, .fa-caret-right::before, .fa-caret-up::before, .fa-certificate::before, .fa-check::before, .fa-check-square-o::before, .fa-chevron-down::before, .fa-chevron-up::before, .fa-circle::before, .fa-circle-o::before, .fa-clipboard::before, .fa-close::before, .fa-clock-o::before, .fa-code::before, .fa-copy::before, .fa-cog::before, .fa-comment::before, .fa-comment-o::before, .fa-compress::before, .fa-desktop::before, .fa-dot-circle-o::before, .fa-download::before, .fa-ellipsis-h::before, .fa-envelope::before, .fa-envelope-o::before, .fa-exclamation-circle::before, .fa-expand::before, .fa-eye::before, .fa-eye-slash::before, .fa-file-text-o::before, .fa-flag::before, .fa-folder::before, .fa-gear::before, .fa-header::before, .fa-heart::before, .fa-italic::before, .fa-link::before, .fa-list::before, .fa-list-ol::before, .fa-list-ul::before, .fa-lock::before, .fa-mail-forward::before, .fa-meh-o::before, .fa-minus::before, .fa-mobile::before, .fa-paint-brush::before, .fa-pencil::before, .fa-picture-o::before, .fa-play::before, .fa-plus::before, .fa-question-circle::before, .fa-quote-right::before, .fa-refresh::before, .fa-reply::before, .fa-rocket::before, .fa-search::before, .fa-shield::before, .fa-sign-out::before, .fa-smile-o::before, .fa-square-o::before, .fa-tasks::before, .fa-thumb-tack::before, .fa-times::before, .fa-times-circle::before, .fa-trash::before, .fa-trash-o::before, .fa-undo::before, .fa-unlock::before, .fa-unlock-alt::before, .fa-upload::before, .fa-user::before, .fa-user-plus::before, .fa-users::before, .fa-wrench::before, nav.post-controls button .read-icon::before, #reply-control.draft .toggler::before, #reply-control .grippie::before, #reply-control .toggler::before, #reply-control .toggle-preview::before {
   font-family: 'Material Icons';
   -webkit-font-feature-settings: 'liga';
           font-feature-settings: 'liga';
@@ -2339,6 +2339,14 @@ ol.category-breadcrumb li + li {
   content: "arrow_downward";
 }
 
+.fa-asterisk {
+  font-size: inherit !important;
+  line-height: inherit !important;
+}
+.fa-asterisk::before {
+  content: "new_releases";
+}
+
 .fa-bar-chart-o {
   font-size: inherit !important;
   line-height: inherit !important;
@@ -2393,6 +2401,14 @@ ol.category-breadcrumb li + li {
 }
 .fa-caret-right::before {
   content: "expand_more";
+}
+
+.fa-caret-up {
+  font-size: inherit !important;
+  line-height: inherit !important;
+}
+.fa-caret-up::before {
+  content: "expand_less";
 }
 
 .fa-certificate {
@@ -2451,6 +2467,14 @@ ol.category-breadcrumb li + li {
   content: "radio_button_unchecked";
 }
 
+.fa-clipboard {
+  font-size: inherit !important;
+  line-height: inherit !important;
+}
+.fa-clipboard::before {
+  content: "content_paste";
+}
+
 .fa-close {
   font-size: inherit !important;
   line-height: inherit !important;
@@ -2475,6 +2499,14 @@ ol.category-breadcrumb li + li {
   content: "code";
 }
 
+.fa-copy {
+  font-size: inherit !important;
+  line-height: inherit !important;
+}
+.fa-copy::before {
+  content: "content_copy";
+}
+
 .fa-cog {
   font-size: inherit !important;
   line-height: inherit !important;
@@ -2497,6 +2529,22 @@ ol.category-breadcrumb li + li {
 }
 .fa-comment-o::before {
   content: "comment";
+}
+
+.fa-compress {
+  font-size: inherit !important;
+  line-height: inherit !important;
+}
+.fa-compress::before {
+  content: "fullscreen_exit";
+}
+
+.fa-desktop {
+  font-size: inherit !important;
+  line-height: inherit !important;
+}
+.fa-desktop::before {
+  content: "desktop_mac";
 }
 
 .fa-dot-circle-o {
@@ -2547,6 +2595,14 @@ ol.category-breadcrumb li + li {
   content: "error";
 }
 
+.fa-expand {
+  font-size: inherit !important;
+  line-height: inherit !important;
+}
+.fa-expand::before {
+  content: "fullscreen";
+}
+
 .fa-eye {
   font-size: inherit !important;
   line-height: inherit !important;
@@ -2561,6 +2617,14 @@ ol.category-breadcrumb li + li {
 }
 .fa-eye-slash::before {
   content: "visibility_off";
+}
+
+.fa-file-text-o {
+  font-size: inherit !important;
+  line-height: inherit !important;
+}
+.fa-file-text-o::before {
+  content: "description";
 }
 
 .fa-flag {
@@ -2659,12 +2723,36 @@ ol.category-breadcrumb li + li {
   content: "forward";
 }
 
+.fa-meh-o {
+  font-size: inherit !important;
+  line-height: inherit !important;
+}
+.fa-meh-o::before {
+  content: "sentiment_neutral";
+}
+
 .fa-minus {
   font-size: inherit !important;
   line-height: inherit !important;
 }
 .fa-minus::before {
   content: "remove";
+}
+
+.fa-mobile {
+  font-size: inherit !important;
+  line-height: inherit !important;
+}
+.fa-mobile::before {
+  content: "phone_iphone";
+}
+
+.fa-paint-brush {
+  font-size: inherit !important;
+  line-height: inherit !important;
+}
+.fa-paint-brush::before {
+  content: "brush";
 }
 
 .fa-pencil {
@@ -2681,6 +2769,14 @@ ol.category-breadcrumb li + li {
 }
 .fa-picture-o::before {
   content: "crop_original";
+}
+
+.fa-play {
+  font-size: inherit !important;
+  line-height: inherit !important;
+}
+.fa-play::before {
+  content: "play_arrow";
 }
 
 .fa-plus {
@@ -2707,12 +2803,28 @@ ol.category-breadcrumb li + li {
   content: "format_quote";
 }
 
+.fa-refresh {
+  font-size: inherit !important;
+  line-height: inherit !important;
+}
+.fa-refresh::before {
+  content: "refresh";
+}
+
 .fa-reply {
   font-size: inherit !important;
   line-height: inherit !important;
 }
 .fa-reply::before {
   content: "reply";
+}
+
+.fa-rocket {
+  font-size: inherit !important;
+  line-height: inherit !important;
+}
+.fa-rocket::before {
+  content: "flight_takeoff";
 }
 
 .fa-search {
@@ -2793,6 +2905,14 @@ ol.category-breadcrumb li + li {
 }
 .fa-times-circle::before {
   content: "cancel";
+}
+
+.fa-trash {
+  font-size: inherit !important;
+  line-height: inherit !important;
+}
+.fa-trash::before {
+  content: "delete";
 }
 
 .fa-trash-o {
